--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>
         Imersão Dev - Aula 03
     </title>
+    <link href="https://danighoul.github.io/jogo_adivinhacao/style.css" rel="stylesheet"/>
+    <script src="https://danighoul.github.io/jogo_adivinhacao/script.js"></script>
 </head>
 
 <body>
